--- a/bluesky-boot-docs/pom.xml
+++ b/bluesky-boot-docs/pom.xml
@@ -45,104 +45,35 @@
 			<type>zip</type>
 			<optional>true</optional>
 		</dependency>
-	</dependencies>
-	<dependencyManagement>
-		<dependencies>
-		</dependencies>
-	</dependencyManagement>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>unpack-doc-resources</id>
-						<goals>
-							<goal>unpack-dependencies</goal>
-						</goals>
-						<phase>generate-resources</phase>
-						<configuration>
-							<includeGroupIds>io.spring.docresources</includeGroupIds>
-							<includeArtifactIds>spring-doc-resources</includeArtifactIds>
-							<includeTypes>zip</includeTypes>
-							<excludeTransitive>true</excludeTransitive>
-							<outputDirectory>${refdocs.build.directory}</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-asciidoc-resources</id>
-						<phase>generate-resources</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${refdocs.build.directory}</outputDirectory>
-							<resources>
-								<resource>
-									<directory>src/main/asciidoc</directory>
-									<filtering>false</filtering>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-				<configuration>
-					<sourceDirectory>${refdocs.build.directory}</sourceDirectory>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.asciidoctor</groupId>
-				<artifactId>asciidoctor-maven-plugin</artifactId>
-				<version>${asciidoctor.maven.plugin.version}</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.springframework.restdocs</groupId>
-						<artifactId>spring-restdocs-asciidoctor</artifactId>
-						<version>${spring-restdocs.version}</version>
-					</dependency>
-				</dependencies>
-				<executions>
-					<execution>
-						<id>asciidoc-to-html</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>process-asciidoc</goal>
-						</goals>
-						<configuration>
-							<sourceDirectory>${refdocs.build.directory}</sourceDirectory>
-							<backend>html5</backend>
-							<sourceHighlighter>highlight.js</sourceHighlighter>
-							<preserveDirectories>true</preserveDirectories>
-							<outputDirectory>src/main/resources/static</outputDirectory>
-							<attributes>
-								// these attributes are required to use the doc resources
-								<docinfo>shared</docinfo>
-								<stylesdir>css/</stylesdir>
-								<stylesheet>spring.css</stylesheet>
-								<linkcss>true</linkcss>
-								<icons>font</icons>
-								<highlightjsdir>js/highlight</highlightjsdir>
-								<highlightjs-theme>github</highlightjs-theme>
 
-								<java-version>${java.version}</java-version>
-								<spring-restdocs-version>${spring-restdocs.version}</spring-restdocs-version>
-								<basedir>${project.basedir}</basedir>
-							</attributes>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+	</dependencies>
+	<!-- <dependencyManagement> <dependencies> <dependency> <groupId>io.spring.asciidoctor</groupId> 
+		<artifactId>spring-asciidoctor-extensions-block-switch</artifactId> <version>0.4.3.RELEASE</version> 
+		</dependency> </dependencies> </dependencyManagement> -->
+	<profiles>
+		<profile>
+			<id>asciidoctor</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.asciidoctor</groupId>
+						<artifactId>asciidoctor-maven-plugin</artifactId>
+						<version>${asciidoctor.maven.plugin.version}</version>
+						<executions>
+							<execution>
+								<id>asciidoc-to-html</id>
+								<configuration>
+									<attributes>
+										<java-version>${java.version}</java-version>
+										<spring-restdocs-version>${spring-restdocs.version}</spring-restdocs-version>
+										<basedir>${project.basedir}</basedir>
+									</attributes>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
