spring boot 2.3.2.RELEASE 적용, spring cloud Hoxton.SR6 적용

--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -70,7 +70,7 @@ spring:
         - 10.0
 
 management:
-  health.probes.enabled: true
+  endpoint.health.probes.enabled: true
   endpoints.web:
     exposure.include: '*'
     base-path: /actuator
