--- a/bluesky-boot-autoconfigure/pom.xml
+++ b/bluesky-boot-autoconfigure/pom.xml
@@ -15,6 +15,11 @@
 			<artifactId>spring-boot-autoconfigure</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>net.luversof.boot</groupId>
+			<artifactId>bluesky-boot</artifactId>
+		</dependency>
+
 		<!-- (s) Annotation processing -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -122,7 +127,7 @@
 			<optional>true</optional>
 		</dependency>
 		<!-- (e) boot admin -->
-		
+
 		<!-- (s) reactive security -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
