#4 sonar-project.properties 설정 변경

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,9 +12,11 @@ sonar.sourceEncoding=UTF-8
 #sonar.exclusions=**/test/**/*
 #sonar.test.exclusions=**/test/*
 
-sonar.modules=bluesky-boot-autoconfigure
+sonar.modules=bluesky-boot,\
+bluesky-boot-autoconfigure
 #bluesky-boot-parent,\
 #bluesky-boot-starters,\
 
+bluesky-boot.projectBaseDir=bluesky-boot
 bluesky-boot-autoconfigure.projectBaseDir=bluesky-boot-autoconfigure
 #bluesky-boot-parent.sonar.projectBaseDir=bluesky-parent
