--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -16,15 +16,15 @@ spring:
     profiles: localdev
     cloud:
         config:
-            uri: http://192.168.0.12:8888
+            uri: http://localhost:8888
     boot:
       admin:
         client:
-          url: http://192.168.0.12:8889
+          url: http://localhost:8889
 eureka:
   client:
     service-url:
-      defaultZone: http://192.168.0.12:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
 ---
 spring:
     profiles: dockerdev
