--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -7,11 +7,10 @@
 	<parent>
 		<groupId>net.luversof.boot</groupId>
 		<artifactId>bluesky-boot-build</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>${bluesky-boot.version}</version>
 	</parent>
 	<properties>
 		<java.version>11</java.version>
-		<bluesky-boot.version>0.0.1-SNAPSHOT</bluesky-boot.version>
 		<spring-boot.version>2.3.3.RELEASE</spring-boot.version>
 		<spring-cloud.version>Hoxton.SR7</spring-cloud.version>
 
