--- a/bluesky-boot-starters/bluesky-boot-starter-batch/pom.xml
+++ b/bluesky-boot-starters/bluesky-boot-starter-batch/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>net.luversof.boot</groupId>
 		<artifactId>bluesky-boot-starters</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>${bluesky-boot.version}</version>
 	</parent>
 	<artifactId>bluesky-boot-starter-batch</artifactId>
 	<dependencies>
