--- a/bluesky-boot-starters/bluesky-boot-starter-parent/pom.xml
+++ b/bluesky-boot-starters/bluesky-boot-starter-parent/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>net.luversof.boot</groupId>
 		<artifactId>bluesky-boot-dependencies</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>${bluesky-boot.version}</version>
 		<relativePath>../../bluesky-boot-dependencies</relativePath>
 	</parent>
 	<artifactId>bluesky-boot-starter-parent</artifactId>
