#6 nexus-k8s profile 설정에 plugin 추가 (이거 통합 관리하는 방법 없나?)

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<module>bluesky-boot-starters</module>
 		<module>bluesky-boot</module>
 	</modules>
+	
 	<profiles>
 		<profile>
 			<activation>
@@ -111,6 +112,34 @@
 		</profile>
 		<profile>
 			<id>nexus-k8s</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>flatten-maven-plugin</artifactId>
+						<configuration>
+							<updatePomFile>true</updatePomFile>
+							<flattenMode>resolveCiFriendliesOnly</flattenMode>
+						</configuration>
+						<executions>
+							<execution>
+								<id>flatten</id>
+								<phase>process-resources</phase>
+								<goals>
+									<goal>flatten</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>flatten.clean</id>
+								<phase>clean</phase>
+								<goals>
+									<goal>clean</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
 			<repositories>
 				<repository>
 					<id>bluesky-nexus-k8s</id>
