--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	</parent>
 	<properties>
 		<bluesky-boot.version>0.0.1-SNAPSHOT</bluesky-boot.version>
+		<bluesky-boot2.version>${git.commit.time}.${git.commit.id.abbrev}</bluesky-boot2.version>
 		<main.basedir>${basedir}/../..</main.basedir>
 	</properties>
 	<modules>
@@ -23,14 +24,28 @@
 		<module>bluesky-boot-starters</module>
 		<module>bluesky-boot</module>
 	</modules>
-	
+
 	<profiles>
 		<profile>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
+			<id>nexus-local</id>
 			<build>
 				<plugins>
+					<plugin>
+						<groupId>pl.project13.maven</groupId>
+						<artifactId>git-commit-id-plugin</artifactId>
+						<executions>
+							<execution>
+								<phase>validate</phase>
+								<goals>
+									<goal>revision</goal>
+								</goals>
+								<configuration>
+									<verbose>true</verbose>
+									<dateFormat>yyyy-MM-dd'T'HH:mm:ssZ</dateFormat>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>flatten-maven-plugin</artifactId>
@@ -57,9 +72,6 @@
 					</plugin>
 				</plugins>
 			</build>
-		</profile>
-		<profile>
-			<id>nexus-local</id>
 			<repositories>
 				<repository>
 					<id>bluesky-nexus-docker</id>
