#6 local profile 주소 오류 수정

--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
 			<repositories>
 				<repository>
 					<id>bluesky-nexus-docker</id>
-					<url>http://local:8082/repository/maven-public/</url>
+					<url>http://localhost:8082/repository/maven-public/</url>
 					<releases>
 						<enabled>true</enabled>
 					</releases>
@@ -88,11 +88,11 @@
 			<distributionManagement>
 				<repository>
 					<id>bluesky-releases</id>
-					<url>http://local:8082/repository/maven-releases/</url>
+					<url>http://localhost:8082/repository/maven-releases/</url>
 				</repository>
 				<snapshotRepository>
 					<id>bluesky-snapshots</id>
-					<url>http://local:8082/repository/maven-snapshots/</url>
+					<url>http://localhost:8082/repository/maven-snapshots/</url>
 				</snapshotRepository>
 			</distributionManagement>
 		</profile>
