--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 						<artifactId>flatten-maven-plugin</artifactId>
 						<configuration>
 							<updatePomFile>true</updatePomFile>
-							<flattenMode>resolveCiFriendliesOnly</flattenMode>
+							<flattenMode>defaults</flattenMode>
 						</configuration>
 						<executions>
 							<execution>
