#6 flatten maven plugin pomElements 변경 설정 추가

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,11 @@
 						<artifactId>flatten-maven-plugin</artifactId>
 						<configuration>
 							<updatePomFile>true</updatePomFile>
-							<flattenMode>defaults</flattenMode>
+							<flattenMode>resolveCiFriendliesOnly</flattenMode>
+							<pomElements>
+								<properties>remove</properties>
+								<dependencyManagement>resolve</dependencyManagement>
+							</pomElements>
 						</configuration>
 						<executions>
 							<execution>
