--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,7 @@
 						<artifactId>flatten-maven-plugin</artifactId>
 						<configuration>
 							<updatePomFile>true</updatePomFile>
-							<flattenMode>resolveCiFriendliesOnly</flattenMode>
+							<flattenMode>clean</flattenMode>
 						</configuration>
 						<executions>
 							<execution>
