#6 flatten maven plugin pomElements properties remove 설정 resolve 로 변경 테스트

--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
 							<updatePomFile>true</updatePomFile>
 							<flattenMode>resolveCiFriendliesOnly</flattenMode>
 							<pomElements>
-								<properties>remove</properties>
+								<properties>resolve</properties>
 								<dependencyManagement>resolve</dependencyManagement>
 							</pomElements>
 						</configuration>
