--- a/bluesky-boot/pom.xml
+++ b/bluesky-boot/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>net.luversof.boot</groupId>
 		<artifactId>bluesky-boot-parent</artifactId>
-		<version>${bluesky-boot.version}</version>
+		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../bluesky-boot-parent</relativePath>
 	</parent>
 	<artifactId>bluesky-boot</artifactId>
