--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -11,8 +11,8 @@
 	</parent>
 	<properties>
 		<java.version>11</java.version>
-		<spring-boot.version>2.3.3.RELEASE</spring-boot.version>
-		<spring-cloud.version>Hoxton.SR8</spring-cloud.version>
+		<spring-boot.version>2.4.0</spring-boot.version>
+		<spring-cloud.version>Hoxton.SR9</spring-cloud.version>
 		<bluesky-boot.version>0.0.1-SNAPSHOT</bluesky-boot.version>
 		<!-- tag:asciidoctor-properties[] -->
 		<asciidoctor-maven-plugin.version>1.6.0</asciidoctor-maven-plugin.version>
@@ -21,7 +21,7 @@
 		<refdocs.build.directory>${project.build.directory}/refdocs/</refdocs.build.directory>
 		<asciidocs.output.directory>${project.build.directory}/generated-docs</asciidocs.output.directory>
 		<!-- end:asciidoctor-properties[] -->
-		<jib-maven-plugin.version>2.5.2</jib-maven-plugin.version>
+		<jib-maven-plugin.version>2.6.0</jib-maven-plugin.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
