--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.3.RELEASE</version>
+		<version>2.4.0</version>
 	</parent>
 	<properties>
 		<main.basedir>${basedir}/../..</main.basedir>
@@ -110,10 +110,16 @@
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
 		</repository>
 		<repository>
 			<id>spring-milestones</id>
 			<url>https://repo.spring.io/milestone</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
 		</repository>
 		<repository>
 			<id>spring-releases</id>
@@ -124,7 +130,7 @@
 		<pluginRepository>
 			<id>spring-snapshots</id>
 			<url>https://repo.spring.io/snapshot</url>
-			<snapshots/>
+			<snapshots />
 		</pluginRepository>
 		<pluginRepository>
 			<id>spring-milestones</id>
