--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -1,5 +1,5 @@
 spring:
-    profiles: opdev
+    config.activate.on-profile: opdev
     cloud:
         config:
             uri: http://localhost:8888
@@ -13,7 +13,7 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
 ---
 spring:
-    profiles: localdev
+    config.activate.on-profile: localdev
     cloud:
         config:
             uri: http://localhost:8888
@@ -27,7 +27,7 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
 ---
 spring:
-    profiles: dockerdev
+    config.activate.on-profile: dockerdev
     cloud:
         config:
             uri: http://config-server:8888
@@ -46,7 +46,7 @@ eureka:
 #    ip-address: 10.0.75.1
 ---
 spring:
-    profiles: k8sdev
+    config.activate.on-profile: k8sdev
     cloud:
         config:
             uri: http://bluesky-cloud-config-server-service:8888
