spring doc resource 0.2.2.RELEASE -> 0.2.4
spring-asciidoctor-extensions 0.4.3.RELEASE -> 0.5.0

--- a/pom.xml
+++ b/pom.xml
@@ -107,9 +107,7 @@
 		<repository>
 			<id>spring-snapshots</id>
 			<url>https://repo.spring.io/snapshot</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
+			<snapshots />
 			<releases>
 				<enabled>false</enabled>
 			</releases>
@@ -134,6 +132,9 @@
 			<id>spring-snapshots</id>
 			<url>https://repo.spring.io/snapshot</url>
 			<snapshots />
+			<releases>
+				<enabled>false</enabled>
+			</releases>
 		</pluginRepository>
 		<pluginRepository>
 			<id>spring-milestones</id>
