--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -16,8 +16,8 @@
 		<bluesky-boot.version>0.0.1-SNAPSHOT</bluesky-boot.version>
 		<!-- tag:asciidoctor-properties[] -->
 		<asciidoctor-maven-plugin.version>1.6.0</asciidoctor-maven-plugin.version>
-		<spring-doc-resources.version>0.2.2.RELEASE</spring-doc-resources.version>
-		<spring-asciidoctor-extensions.version>0.4.3.RELEASE</spring-asciidoctor-extensions.version>
+		<spring-doc-resources.version>0.2.4</spring-doc-resources.version>
+		<spring-asciidoctor-extensions.version>0.5.0</spring-asciidoctor-extensions.version>
 		<refdocs.build.directory>${project.build.directory}/refdocs/</refdocs.build.directory>
 		<asciidocs.output.directory>${project.build.directory}/generated-docs</asciidocs.output.directory>
 		<!-- end:asciidoctor-properties[] -->
@@ -107,7 +107,7 @@
 			<dependency>
 				<groupId>org.mybatis.spring.boot</groupId>
 				<artifactId>mybatis-spring-boot-starter</artifactId>
-				<version>2.1.3</version>
+				<version>2.1.4</version>
 			</dependency>
 			<!-- (e) mybatis -->
 
@@ -115,12 +115,12 @@
 			<dependency>
 				<groupId>de.codecentric</groupId>
 				<artifactId>spring-boot-admin-starter-server</artifactId>
-				<version>2.3.0</version>
+				<version>2.3.1</version>
 			</dependency>
 			<dependency>
 				<groupId>de.codecentric</groupId>
 				<artifactId>spring-boot-admin-starter-client</artifactId>
-				<version>2.3.0</version>
+				<version>2.3.1</version>
 			</dependency>
 			<!-- (e) boot-admin -->
 
@@ -128,7 +128,7 @@
 			<dependency>
 				<groupId>com.github.zhanhb</groupId>
 				<artifactId>thymeleaf-layout-dialect</artifactId>
-				<version>2.4.1</version>
+				<version>2.5.1</version>
 			</dependency>
 			<!-- (e) thymeleaf-layout-dialect -->
 
@@ -168,6 +168,46 @@
 			<build>
 				<plugins>
 					<plugin>
+						<groupId>com.googlecode.maven-download-plugin</groupId>
+						<artifactId>download-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>unpack-doc-resources</id>
+								<phase>generate-resources</phase>
+								<goals>
+									<goal>wget</goal>
+								</goals>
+								<configuration>
+									<url>https://repo.spring.io/release/io/spring/docresources/spring-doc-resources/${spring-doc-resources.version}/spring-doc-resources-${spring-doc-resources.version}.zip</url>
+									<unpack>true</unpack>
+									<outputDirectory>${refdocs.build.directory}</outputDirectory>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<!-- <plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-resources-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>copy-asciidoc-resources</id>
+								<phase>generate-resources</phase>
+								<goals>
+									<goal>copy-resources</goal>
+								</goals>
+								<configuration>
+									<outputDirectory>${refdocs.build.directory}</outputDirectory>
+									<resources>
+										<resource>
+											<directory>src/main/asciidoc</directory>
+											<filtering>false</filtering>
+										</resource>
+									</resources>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin> -->
+					<!-- <plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>flatten-maven-plugin</artifactId>
 						<configuration>
@@ -210,7 +250,7 @@
 								</configuration>
 							</execution>
 						</executions>
-					</plugin>
+					</plugin> -->
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-resources-plugin</artifactId>
