--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -1,42 +1,45 @@
 spring:
-    config.activate.on-profile: opdev
-    cloud:
-        config:
-            uri: http://localhost:8888
-    boot:
-      admin:
-        client:
-          url: http://localhost:8889
+  config.activate.on-profile: opdev
+  cloud:
+    config:
+      uri: http://localhost:8888
+  boot:
+    admin:
+      client:
+        url: http://localhost:8889
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
 ---
 spring:
-    config.activate.on-profile: localdev
-    cloud:
-        config:
-            uri: http://localhost:8888
-    boot:
-      admin:
-        client:
-          url: http://localhost:8889
+  config:
+    activate.on-profile: localdev
+#    import: optional:configserver:http://localhost:8888
+  cloud:
+    config:
+      uri: http://localhost:8888
+      profile: localdev
+  boot:
+    admin:
+      client:
+        url: http://localhost:8889
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
 ---
 spring:
-    config.activate.on-profile: dockerdev
-    cloud:
-        config:
-            uri: http://config-server:8888
-#            uri: http://10.0.75.1:8888
-    boot:
-      admin:
-        client:
-          url: http://admin-server:8889
-#          url: http://10.0.75.1:8889
+  config.activate.on-profile: dockerdev
+  cloud:
+    config:
+      uri: http://config-server:8888
+#      uri: http://10.0.75.1:8888
+  boot:
+    admin:
+      client:
+        url: http://admin-server:8889
+#        url: http://10.0.75.1:8889
 eureka:
   client:
     service-url:
@@ -46,14 +49,14 @@ eureka:
 #    ip-address: 10.0.75.1
 ---
 spring:
-    config.activate.on-profile: k8sdev
-    cloud:
-        config:
-            uri: http://bluesky-cloud-config-server-service:8888
-    boot:
-      admin:
-        client:
-          url: http://bluesky-cloud-admin-server-service:8889
+  config.activate.on-profile: k8sdev
+  cloud:
+    config:
+      uri: http://bluesky-cloud-config-server-service:8888
+  boot:
+    admin:
+      client:
+        url: http://bluesky-cloud-admin-server-service:8889
 eureka:  instance:    hostname: localhost
   client:
     service-url:
@@ -70,9 +73,10 @@ spring:
         - 10.0
 
 management:
-  endpoint.health.probes.enabled: true
+  endpoint:
+    health.probes.enabled: true
   endpoints.web:
-    exposure.include: '*'
+    exposure.include: "*"
     base-path: /actuator
 eureka:
   client:
