--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,11 +12,17 @@ sonar.sourceEncoding=UTF-8
 #sonar.exclusions=**/test/**/*
 #sonar.test.exclusions=**/test/*
 
-sonar.modules=bluesky-boot,\
+sonar.modules=bluesky-boot-build,\
+bluesky-boot-dependencies,\
+bluesky-boot-parent,\
+bluesky-boot,\
 bluesky-boot-autoconfigure
 #bluesky-boot-parent,\
 #bluesky-boot-starters,\
 
+bluesky-boot-build.projectBaseDir=.
+bluesky-boot-dependencies.projectBaseDir=bluesky-boot-dependencies
+bluesky-boot-parent.projectBaseDir=bluesky-boot-parent
 bluesky-boot.projectBaseDir=bluesky-boot
 bluesky-boot-autoconfigure.projectBaseDir=bluesky-boot-autoconfigure
 #bluesky-boot-parent.sonar.projectBaseDir=bluesky-parent
