--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,7 @@ sonar.sourceEncoding=UTF-8
 #sonar.exclusions=**/test/**/*
 #sonar.test.exclusions=**/test/*
 
-sonar.modules=bluesky-boot-build,\
+sonar.modules=\
 bluesky-boot-dependencies,\
 bluesky-boot-parent,\
 bluesky-boot,\
@@ -20,7 +20,7 @@ bluesky-boot-autoconfigure
 #bluesky-boot-parent,\
 #bluesky-boot-starters,\
 
-bluesky-boot-build.projectBaseDir=.
+#bluesky-boot-build.projectBaseDir=.
 bluesky-boot-dependencies.projectBaseDir=bluesky-boot-dependencies
 bluesky-boot-parent.projectBaseDir=bluesky-boot-parent
 bluesky-boot.projectBaseDir=bluesky-boot
