--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,13 +4,12 @@ sonar.projectVersion=0.0.1-SHAPSHOT
 
 sonar.scm.provider=git
 
+sonar.sourceEncoding=UTF-8
+sonar.java.source=11
 sonar.sources=src/main
 sonar.tests=src/test
-sonar.java.binaries=.
-sonar.java.source=11
-sonar.sourceEncoding=UTF-8
-#sonar.exclusions=**/test/**/*
-#sonar.test.exclusions=**/test/*
+sonar.java.binaries=target/classes
+sonar.java.test.binaries=target/test-classes
 
 sonar.modules=\
 bluesky-boot,\
