--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.java.source=11
 sonar.sources=src/main
 sonar.tests=src/test
 sonar.java.binaries=target/classes
-#sonar.java.test.binaries=target/test-classes
+sonar.java.test.binaries=target/test-classes
 
 sonar.modules=\
 bluesky-boot,\
