--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=bluesky-boot
 sonar.projectName=bluesky-boot
 sonar.projectVersion=0.0.1-SHAPSHOT
+sonar.branch.name=develop
 
 sonar.scm.provider=git
 
