--- a/bluesky-boot-autoconfigure/src/test/resources/mongodb/mongodb-opdev.properties
+++ b/bluesky-boot-autoconfigure/src/test/resources/mongodb/mongodb-opdev.properties
@@ -10,11 +10,11 @@ bluesky-modules.mongodb.default-connection-pool-settings.max-connection-idle-tim
 bluesky-modules.mongodb.default-read-concern-level=local
 
 bluesky-modules.mongodb.default-write-concern.w=W1
-bluesky-modules.mongodb.default-write-concern.w-timeout-ms=secondaryPreferred
+bluesky-modules.mongodb.default-write-concern.w-timeout-ms=500
 bluesky-modules.mongodb.default-write-concern.journal=false
 
 #bluesky-modules.mongodb.default-properties.uri=mongodb://localhost/test
 
-bluesky-modules.mongodb.connection-map.blog.host=localhost
-bluesky-modules.mongodb.connection-map.blog.database=blog
-bluesky-modules.mongodb.connection-map.test2.host=192.168.12.3
+#bluesky-modules.mongodb.connection-map.blog.host=localhost
+#bluesky-modules.mongodb.connection-map.blog.database=blog
+#bluesky-modules.mongodb.connection-map.test2.host=192.168.12.3
