--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -21,6 +21,7 @@
 		<refdocs.build.directory>${project.build.directory}/refdocs/</refdocs.build.directory>
 		<asciidocs.output.directory>${project.build.directory}/generated-docs</asciidocs.output.directory>
 		<!-- end:asciidoctor-properties[] -->
+		<jacoco-maven-plugin.version>0.8.6</jacoco-maven-plugin.version>
 		<jib-maven-plugin.version>2.6.0</jib-maven-plugin.version>
 	</properties>
 	<dependencyManagement>
@@ -32,7 +33,7 @@
 				<version>0.9.12</version>
 			</dependency>
 			<!-- (e) devCheck 기능 관련 -->
-		
+
 			<!-- (s) spring boot -->
 			<dependency>
 				<groupId>net.luversof.boot</groupId>
@@ -154,6 +155,36 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
+					<groupId>org.apache.maven.plugin</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${maven-surefire-plugin.version}</version>
+					<configuration>
+						<includes>
+							<include>**/*Test.java</include>
+							<include>**/*Tests.java</include>
+						</includes>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>${jacoco-maven-plugin.version}</version>
+					<executions>
+						<execution>
+							<id>prepare-agent</id>
+							<goals>
+								<goal>prepare-agent</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>report</id>
+							<goals>
+								<goal>report</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
 					<groupId>com.google.cloud.tools</groupId>
 					<artifactId>jib-maven-plugin</artifactId>
 					<version>${jib-maven-plugin.version}</version>
@@ -163,6 +194,24 @@
 	</build>
 
 	<profiles>
+		<profile>
+			<id>sonarqube</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugin</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+					</plugin>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 		<profile>
 			<id>asciidoctor</id>
 			<build>
@@ -185,72 +234,22 @@
 							</execution>
 						</executions>
 					</plugin>
-					<!-- <plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-resources-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>copy-asciidoc-resources</id>
-								<phase>generate-resources</phase>
-								<goals>
-									<goal>copy-resources</goal>
-								</goals>
-								<configuration>
-									<outputDirectory>${refdocs.build.directory}</outputDirectory>
-									<resources>
-										<resource>
-											<directory>src/main/asciidoc</directory>
-											<filtering>false</filtering>
-										</resource>
-									</resources>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin> -->
-					<!-- <plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>flatten-maven-plugin</artifactId>
-						<configuration>
-							<updatePomFile>true</updatePomFile>
-							<flattenMode>resolveCiFriendliesOnly</flattenMode>
-						</configuration>
-						<executions>
-							<execution>
-								<id>flatten</id>
-								<phase>process-resources</phase>
-								<goals>
-									<goal>flatten</goal>
-								</goals>
-							</execution>
-							<execution>
-								<id>flatten.clean</id>
-								<phase>clean</phase>
-								<goals>
-									<goal>clean</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-dependency-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>unpack-doc-resources</id>
-								<goals>
-									<goal>unpack-dependencies</goal>
-								</goals>
-								<phase>generate-resources</phase>
-								<configuration>
-									<includeGroupIds>io.spring.docresources</includeGroupIds>
-									<includeArtifactIds>spring-doc-resources</includeArtifactIds>
-									<includeTypes>zip</includeTypes>
-									<excludeTransitive>true</excludeTransitive>
-									<outputDirectory>${refdocs.build.directory}</outputDirectory>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin> -->
+					<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-resources-plugin</artifactId> 
+						<executions> <execution> <id>copy-asciidoc-resources</id> <phase>generate-resources</phase> 
+						<goals> <goal>copy-resources</goal> </goals> <configuration> <outputDirectory>${refdocs.build.directory}</outputDirectory> 
+						<resources> <resource> <directory>src/main/asciidoc</directory> <filtering>false</filtering> 
+						</resource> </resources> </configuration> </execution> </executions> </plugin> -->
+					<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>flatten-maven-plugin</artifactId> 
+						<configuration> <updatePomFile>true</updatePomFile> <flattenMode>resolveCiFriendliesOnly</flattenMode> 
+						</configuration> <executions> <execution> <id>flatten</id> <phase>process-resources</phase> 
+						<goals> <goal>flatten</goal> </goals> </execution> <execution> <id>flatten.clean</id> 
+						<phase>clean</phase> <goals> <goal>clean</goal> </goals> </execution> </executions> 
+						</plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-dependency-plugin</artifactId> 
+						<executions> <execution> <id>unpack-doc-resources</id> <goals> <goal>unpack-dependencies</goal> 
+						</goals> <phase>generate-resources</phase> <configuration> <includeGroupIds>io.spring.docresources</includeGroupIds> 
+						<includeArtifactIds>spring-doc-resources</includeArtifactIds> <includeTypes>zip</includeTypes> 
+						<excludeTransitive>true</excludeTransitive> <outputDirectory>${refdocs.build.directory}</outputDirectory> 
+						</configuration> </execution> </executions> </plugin> -->
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-resources-plugin</artifactId>
