--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -178,6 +178,7 @@
 						</execution>
 						<execution>
 							<id>report</id>
+							<phase>test</phase>
 							<goals>
 								<goal>report</goal>
 							</goals>
