--- a/bluesky-boot-docs/src/main/resources/application.properties
+++ b/bluesky-boot-docs/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 server.port=123123
+
+datasource.default.type=com.zaxxer.hikari.HikariDataSource
+datasource.default.url=jdbc:mariadb://localhost:3306
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+datasource.default.password=root
+datasource.default.username=root
+
+spring.jpa.database=MYSQL
+spring.jpa.showSql=true
+spring.jpa.databasePlatform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
