--- a/bluesky-boot-autoconfigure/pom.xml
+++ b/bluesky-boot-autoconfigure/pom.xml
@@ -106,6 +106,19 @@
 		</dependency>
 		<!-- (e) data-mongodb -->
 
+		<!-- (s) data-redis -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<!-- (e) data-redis -->
+
 		<!-- (s) data-rest -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
