DevCheckController 처리 bluesky-boot-autoconfigure-devcheck로 이전

--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -97,6 +97,11 @@
 				<artifactId>bluesky-boot-test-autoconfigure</artifactId>
 				<version>${bluesky-boot.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>io.github.luversof</groupId>
+				<artifactId>bluesky-boot-autoconfigure-devcheck</artifactId>
+				<version>${bluesky-boot.version}</version>
+			</dependency>
 			<!-- (e) bluesky boot -->
 
 			<!-- (s) spring cloud -->
