--- a/bluesky-boot-autoconfigure/pom.xml
+++ b/bluesky-boot-autoconfigure/pom.xml
@@ -19,6 +19,10 @@
 			<groupId>io.github.luversof</groupId>
 			<artifactId>bluesky-boot</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.github.luversof</groupId>
+			<artifactId>bluesky-boot-autoconfigure-devcheck</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.reflections</groupId>
