--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,14 @@
 	</profiles>
 	<repositories>
 		<repository>
+			<id>maven-snapshots</id>
+			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+			<snapshots />
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</repository>
+		<repository>
 			<id>spring-snapshots</id>
 			<url>https://repo.spring.io/snapshot</url>
 			<snapshots />
