--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -14,6 +14,7 @@
 		<spring-boot.version>2.5.4</spring-boot.version>
 		<spring-cloud.version>2020.0.3</spring-cloud.version>
 		<bluesky-boot.version>0.0.1-SNAPSHOT</bluesky-boot.version>
+		<bluesky-boot-autoconfigure-devcheck.version>1.0.1-SNAPSHOT</bluesky-boot-autoconfigure-devcheck.version>
 		<!-- tag:asciidoctor-properties[] -->
 		<download-maven-plugin.version>1.6.6</download-maven-plugin.version>
 		<asciidoctor-maven-plugin.version>2.1.0</asciidoctor-maven-plugin.version>
@@ -28,14 +29,6 @@
 	</properties>
 	<dependencyManagement>
 		<dependencies>
-			<!-- (s) devCheck 기능 관련 -->
-			<dependency>
-				<groupId>org.reflections</groupId>
-				<artifactId>reflections</artifactId>
-				<version>0.9.12</version>
-			</dependency>
-			<!-- (e) devCheck 기능 관련 -->
-
 			<!-- (s) bluesky boot -->
 			<dependency>
 				<groupId>io.github.luversof</groupId>
@@ -100,7 +93,7 @@
 			<dependency>
 				<groupId>io.github.luversof</groupId>
 				<artifactId>bluesky-boot-autoconfigure-devcheck</artifactId>
-				<version>${bluesky-boot.version}</version>
+				<version>${bluesky-boot-autoconfigure-devcheck.version}</version>
 			</dependency>
 			<!-- (e) bluesky boot -->
 
